--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,37 @@
 h1 {
   text-align: center;
+  font-size: 200px;
+  color: white;
+}
+
+h2 {
+  text-align: center;
+  font-size: 30px;
+  color: grey;
+}
+
+h3 {
+  color: grey;
+  font-size: 80px;
+  text-align: center;
+
+}
+
+p {
+  text-align: center;
+  color: white;
+  font-size: 140px;
+}
+
+body {
+  background-color: black;
 }
 
 .box_mitte {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 25vh;
+  margin-top: 30vh;
 }
 
 .mitte {
