--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ h1 {
 h2 {
   text-align: center;
   font-size: 30px;
-  color: grey;
+  color: white;
 }
 
 h3 {
@@ -17,23 +17,13 @@ h3 {
 
 }
 
+
 p {
   text-align: center;
-  color: white;
-  font-size: 140px;
+  color: grey;
+  font-size: 120px;
 }
 
 body {
-  background-color: black;
-}
-
-.box_mitte {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 30vh;
-}
-
-.mitte {
-  text-align: center;
+  background-image: url(/images/Gradient.jpg);
 }
